Revision history for ExtUtils-Helpers

{{$NEXT}}
          Make EU::H easier to embed in inc/

0.010     2011-09-21 20:08:58 Europe/Amsterdam
          Fixed make_executable on Windows

0.009     2011-08-24 17:30:00 Europe/Amsterdam
          Fixed failing test on Windows

0.008     2011-08-23 17:09:37 Europe/Amsterdam
          Split out Windows and Unix specific parts
          Use $Config{path_sep} in tests

0.007     2011-05-07 10:59:15 Europe/Amsterdam
          Fixes for make_executable.t and make_executable

0.006     2011-05-05 09:30:59 Europe/Amsterdam
          Made split_like_shell handle newlines and tabs on Windows

0.005     2011-04-20 00:05:13 Europe/Amsterdam
          Fixed definedness issue in manify

0.004     2011-04-19 23:04:53 Europe/Amsterdam
          Added manify

0.003     2011-04-16 15:52:51 Europe/Amsterdam
          Added man1_pagename and man3_pagename

0.002     2011-04-14 14:45:27 Europe/Amsterdam
          Fixed compilation and other issues on Windows

0.001     2011-03-28 14:59:00 Europe/Amsterdam
    -     First version